--- a/style.css
+++ b/style.css
@@ -1,23 +1,45 @@
+body{
+  margin: auto;
+}  
 .upside{
   width: 100%;
-  height: 50%;
+  height: 340px;
   background-image: url(Image/photo_3_2023-12-24_15-30-30.jpg);
 }
 #logo {
-  height: 100px;
+  height: 90px;
+  padding-top: 7px;
 }
 p{
   color: white;
 }
 h3{
   color: white;
+  font-size: 23px;
 }
 h4{
   color: rgb(29, 29, 149) b;
+  font-size: 20px;
 }
-.right {
-float: lef;
+.divlogo{
+  display: inline-block;
+  width: 27%;
+  height: 50%;
+  position: absolute;
+  left: 350px;
 }
+.divlogin {
+  display: inline-block;
+  width: 25%;
+  position: absolute;
+  right: 250px;
+}
+.label{
+  width: 100%;
+  height: 25px;
+  display: inline-block;
+}
+
 #login{
   background-color: rgb(5, 177, 204);
   padding: 5px;
@@ -25,13 +47,33 @@ float: lef;
   height: 30px;
   color: white;
   font-size: 10px;
+  border-color: rgb(5, 177, 204);
+  border-radius: 10%;
+  
 }
 #pass{
   height: 30px;
   background-color: white;
-  padding: 10px;
-  font-size: 11px;
+  padding: 1px;
+  font-size: 10px;
+  width: 110px;
+  border-color: white;
+  border-radius: 7%;
 }
 .downside{
-  background-color: rgb(227, 243, 243);
+  background-color: rgb(231, 236, 247);
+  width: 100%;
+  height: 380px;
+}
+.divgrid{
+  display: inline-block;
+  width: 15%;
+  height: 155px;
+  background-color: white;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 6px;
+  border-radius: 10px;
 }
