--- a/style.css
+++ b/style.css
@@ -32,9 +32,25 @@ h4{
   display: inline-block;
   width: 25%;
   position: absolute;
-  right: 250px;
+  right: 235px;
+  padding:10px 25px 25px 20px;
+  background-color: rgba(240, 248, 255, 0.297);
+  border-radius: 6px;
 }
-.label{
+.form-float{
+  position: relative;
+}
+.icon{
+  position: absolute;
+  top: calc(7%);
+  left: 0.9rem;
+}
+.icon2{
+  position: absolute;
+  top: calc(35%);
+  left: 0.9rem;
+}
+.input{
   width: 100%;
   height: 25px;
   display: inline-block;
@@ -47,19 +63,24 @@ h4{
   height: 30px;
   color: white;
   font-size: 10px;
-  border-color: rgb(5, 177, 204);
+  border: none;
   border-radius: 10%;
-  
-}
+  cursor: pointer;
+}  
 #pass{
   height: 30px;
   background-color: white;
   padding: 1px;
   font-size: 10px;
   width: 110px;
+  border: none;
   border-color: white;
   border-radius: 7%;
+  cursor: pointer;
 }
+#login:hover, #pass:hover{
+  opacity: 0.6;
+} 
 .downside{
   background-color: rgb(231, 236, 247);
   width: 100%;
@@ -71,9 +92,22 @@ h4{
   height: 155px;
   background-color: white;
   text-align: center;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 6px;
+  margin: 10px 10px 6px;
   border-radius: 10px;
+  font-size: 18px;
+}
+.divgrid i{
+  padding-top: 30px;
+}
+#calendar{
+  color: green;
+}
+#announce{
+  color: rgb(31, 208, 149);
+}
+#tran{
+  color: rgb(97, 156, 212);
+}
+.l{
+  color: rgb(224, 169, 103);
 }
